Apply suggestions from code review
Co-authored-by: Carolina Menezes <60782333+carolinamenezes@users.noreply.github.com>

--- a/docs/faststore/components/molecules/rating.mdx
+++ b/docs/faststore/components/molecules/rating.mdx
@@ -5,7 +5,7 @@ components:
   - Rating.tsx
 ---
 
-The `Rating` component displays a product's average rating based on other shoppers' feedback and reviews. It supports icons from our components.
+The `Rating` component displays a product’s average rating based on shopper feedback and reviews. It supports customizable icons provided by the [Icon component](https://developers.vtex.com/docs/guides/faststore/reference-icons).
 
 ## Overview
 
