--- a/docs/faststore/docs/sdk/analytics/sending-custom-events.mdx
+++ b/docs/faststore/docs/sdk/analytics/sending-custom-events.mdx
@@ -121,7 +121,7 @@ After defining the event interface, you'll need to intercept these events using 
     }
     ```
 
-Note that to target extended properties of events, you'll also need to configure the types of your [`useAnalyticsEvent`](/reference/sdk/analytics/useAnalyticsEvent) callback function to expect an event of such type.
+Note that to target extended properties of events, you'll also need to configure the types of your [`useAnalyticsEvent`](https://developers.vtex.com/docs/guides/faststore/analytics-use-analytics-event) callback function to expect an event of such type.
 
     ```ts
     import { useAnalyticsEvent } from '@faststore/sdk'
