--- a/docs/faststore/docs/getting-started/1-onboarding/starting-the-project.mdx
+++ b/docs/faststore/docs/getting-started/1-onboarding/starting-the-project.mdx
@@ -131,6 +131,6 @@ In this scenario, the repository creation was unsuccessful, resulting in the fai
 
 ---
 
-## Next Step
+## Next step
 
 Now that your store is up and running, let's set up your development environment by following the step-by-step instructions in [Setting up the Project](https://developers.vtex.com/docs/guides/faststore/getting-started-2-setting-up-the-project).
