--- a/docs/faststore/components/molecules/rating-field.mdx
+++ b/docs/faststore/components/molecules/rating-field.mdx
@@ -52,7 +52,7 @@ For more information, check [Importing FastStore UI component styles](https://de
 
 ---
 
-## Design tokens
+## Design Tokens
 
 ### Nested elements
 
