--- a/docs/faststore/components/molecules/tooltip.mdx
+++ b/docs/faststore/components/molecules/tooltip.mdx
@@ -40,7 +40,7 @@ Import the component from [@faststore/ui](https://developers.vtex.com/docs/guide
 import { Tooltip } from '@faststore/ui'
 ```
 
-### Import Styles into your FastStore project
+### Import styles into your FastStore project
 
 To apply the styles of this component in your FastStore project, import the following into your stylesheet:
 
@@ -58,7 +58,7 @@ Follow the instructions in the [Importing FastStore UI component styles](https:/
 
 ---
 
-## Design Tokens
+## Design tokens
 
 <TokenTable>
   <TokenRow
@@ -106,7 +106,7 @@ Follow the instructions in the [Importing FastStore UI component styles](https:/
   />
 </TokenTable>
 
-### Nested Elements
+### Nested elements
 
 #### Indicator
 
