--- a/docs/faststore/components/molecules/textarea-field.mdx
+++ b/docs/faststore/components/molecules/textarea-field.mdx
@@ -5,7 +5,7 @@ components:
   - TextareaField.tsx
 ---
 
-`TextareaField` is a multi-line text field component to get long user inputs. The component wraps an [Textarea](https://developers.vtex.com/docs/guides/faststore/atoms-textarea) and its corresponding [Label](https://developers.vtex.com/docs/guides/faststore/atoms-label).
+`TextareaField` is a multi-line text field component to get long user inputs. The component wraps a [Textarea](https://developers.vtex.com/docs/guides/faststore/atoms-textarea) and its corresponding [Label](https://developers.vtex.com/docs/guides/faststore/atoms-label).
 
 <Tabs items={['Example', 'Code']} defaultIndex="0">
   <Tab>
@@ -43,7 +43,7 @@ Import the component from [@faststore/ui](https://developers.vtex.com/docs/guide
 import { TextareaField } from '@faststore/ui'
 ```
 
-### Import Styles into your FastStore project
+### Import styles into your FastStore project
 
 To apply the styles of this component in your FastStore project, import the following into your stylesheet:
 
