Apply suggestions from code review
Co-authored-by: Carolina Menezes <60782333+carolinamenezes@users.noreply.github.com>

--- a/docs/faststore/docs/my-account/overview.mdx
+++ b/docs/faststore/docs/my-account/overview.mdx
@@ -1,5 +1,5 @@
 ---
-title: "Building My Account"
+title: "Enabling My Account on your FastStore website"
 ---
 
 >⚠️ This is an experimental feature.
