--- a/docs/faststore/docs/my-account/overview.mdx
+++ b/docs/faststore/docs/my-account/overview.mdx
@@ -4,7 +4,7 @@ title: "Enabling My Account on your FastStore website"
 
 >⚠️ This is an experimental feature.
 
-In this guide, you will learn how to enable the experimental **My Account** feature in your store.
+In this guide, you'll learn how to enable the experimental **My Account** feature in your store.
 
 **My Account** is a crucial component for any ecommerce website, as it allows customers to manage their personal information, track order history, update security settings, and perform other account-related actions.
 
