--- a/docs/faststore/components/molecules/navbar-links.mdx
+++ b/docs/faststore/components/molecules/navbar-links.mdx
@@ -3,6 +3,7 @@ title: "NavbarLinks"
 excerpt: Displays a set of navigation links.
 components:
   - NavbarLinks.tsx
+  - NavbarLinksList.tsx
 ---
 
 The `NavbarLinks` component displays a set of navigation links that self adapts on mobile or desktop screens.
