--- a/docs/faststore/docs/reference/project-structure/config-options.mdx
+++ b/docs/faststore/docs/reference/project-structure/config-options.mdx
@@ -44,6 +44,8 @@ Sets default metadata related to Search Engine Optimization (SEO).
 | `titleTemplate` | `string` | Dynamic page title pattern. Use `%s` as a placeholder (e.g., `"%s \| StoreName"`).    |
 | `author`        | `string` | Content author/owner for attribution.                                        |
 
+Learn more in [SEO](https://developers.vtex.com/docs/guides/faststore/seo-overview).
+
 ---
 
 ### `theme`
