--- a/docs/faststore/docs/security/managing-secrets.mdx
+++ b/docs/faststore/docs/security/managing-secrets.mdx
@@ -10,7 +10,7 @@ In this guide, you'll learn how to manage secrets in your FastStore project usin
 
 ## Secrets flow
 
-Secrets employs a structured method for interacting with different deployment providers based on project-specific configurations. See below an example of a successful flow that illustrates how WebOps determines the appropriate provider to use depending on the project’s settings and then delegates the build and deployment process accordingly.
+The Secrets feature employs a structured method for interacting with deployment providers based on project-specific configurations. Below is an example of a successful flow that illustrates how WebOps determines the appropriate provider to use based on the project’s settings and then delegates the build and deployment process accordingly.
 
 ```mermaid
 sequenceDiagram
@@ -60,39 +60,37 @@ autonumber
   WebOps -->> User: Notify build and secret operation success
 ```
 
-When a user initiates a request to create or delete a secret (1), WebOps first validates the user's permissions and the request scope (2). The scope defines the context, such as project, environment, namespace, or account, that determines where and how the secret will be stored, propagated, and accessed. Once validated, WebOps forwards the operation to AWS Secrets Manager (3), which confirms the action (4). Next, WebOps identifies the appropriate deployment provider based on the project’s configuration (5). It then securely transmits the secret information to the selected provider (6, 11, 16). The chosen provider consumes the secret and prepares the environment (7, 12, 17), after which WebOps triggers the build and deployment process (8, 13, 18). The provider proceeds to build and host the application (9, 14, 19) and returns a status update to WebOps (10, 15, 20). Finally, WebOps notifies the user that both the secret operation and the deployment were successful (21).
+When a user initiates a request to create or delete a secret (1), WebOps first validates the user's permissions and the request scope (2). The scope defines the context, such as project, environment, namespace, or account, that determines where and how the secret will be stored, propagated, and accessed. Once validated, WebOps forwards the operation to AWS Secrets Manager (3), which confirms the action (4). Next, WebOps identifies the appropriate deployment provider based on the project’s configuration (5). It then securely transmits the secret information to the selected provider (6, 11, 16). The chosen provider consumes the secret and prepares the environment (7, 12, 17), after which WebOps triggers the build and deployment process (8, 13, 18). The provider proceeds to build and host the application (9, 14, 19) and returns a status update to WebOps (10, 15, 20). Finally, WebOps notifies the user that the secret operation and the deployment were successful (21).
 
 ## Instructions
 
 To manage your secrets, access your [FastStore WebOps dashboard](https://developers.vtex.com/docs/guides/faststore/1-onboarding-dashboard) and navigate to the **Settings** tab.
 
-In the **Secrets** section, you can [create](#creating-secrets), [update](#updating-secrets), or [delete](#deleting-secrets) following the steps below.
+In the **Secrets** section, you can [create](#creating-secrets), [update](#updating-secrets), or [delete](#deleting-secrets) secrets following the steps below.
 
-<Tabs items={[Creating secrets, Updating secrets, Deleting secrets]} defaultIndex="0">
-  <Tab>
+### Creating secrets
+
 1. Input the related values in the `Key` and `Value` fields.
 2. Click `Add`. You’ll see the message: `New Secret added successfully. Changes will take effect in the next successful deployment.`
 3. Click on `Redeploy`. You’ll see the message: `Creating deployment…`, then `Deployment created successfully`.
-  </Tab>
 
-  <Tab>
+### Updating secrets
+
 1. Go to the `Current Keys` section.
 2. Alongside the secret you need to update, click `⋮`, then click `Edit`.
 3. Update the secret in the modal that will open.
 4. Click `Update`. You’ll see the message: `Secret updated successfully. Changes will take effect in the next successful deployment.`
 5. Click on `Redeploy`. You’ll see the message: `Creating deployment…`, then `Deployment created successfully`.
-  </Tab>
 
-  <Tab>
+### Deleting secrets
+
 1. Go to the `Current Keys` section.
 2. Alongside the secret you need to update, click `⋮`, then click `Delete`.
 3. Validate the secret you want to remove. 
 
-   >⚠ This action can’t be undone.
+	>⚠ This action can’t be undone.
 
 4. Click `Delete secret`. You’ll see the message: `Secret deleted successfully. Changes will take effect in the next successful deployment.`
 5. Click on `Redeploy`. You’ll see the message: `Creating deployment…`, then `Deployment created successfully`.
-  </Tab>
-</Tabs>
 
 >ℹ Follow the deployment status in the [Deploys](https://developers.vtex.com/docs/guides/faststore/1-onboarding-dashboard#deploys) tab of the WebOps dashboard.
