--- a/docs/faststore/docs/security/managing-secrets.mdx
+++ b/docs/faststore/docs/security/managing-secrets.mdx
@@ -60,7 +60,13 @@ autonumber
   WebOps -->> User: Notify build and secret operation success
 ```
 
-When a user initiates a request to create or delete a secret (1), WebOps first validates the user's permissions and the request scope (2). The scope defines the context, such as project, environment, namespace, or account, that determines where and how the secret will be stored, propagated, and accessed. Once validated, WebOps forwards the operation to AWS Secrets Manager (3), which confirms the action (4). Next, WebOps identifies the appropriate deployment provider based on the project’s configuration (5). It then securely transmits the secret information to the selected provider (6, 11, 16). The chosen provider consumes the secret and prepares the environment (7, 12, 17), after which WebOps triggers the build and deployment process (8, 13, 18). The provider proceeds to build and host the application (9, 14, 19) and returns a status update to WebOps (10, 15, 20). Finally, WebOps notifies the user that the secret operation and the deployment were successful (21).
+When a user initiates a request to create or delete a secret, WebOps first validates the user's permissions and the request scope. The scope defines the context, such as project, environment, namespace, or account, that determines where and how the secret will be stored, propagated, and accessed.
+
+Once validated, WebOps forwards the operation to AWS Secrets Manager, which confirms the action. Next, WebOps identifies the appropriate deployment provider based on the project’s configuration. It then securely transmits the secret information to the selected provider.
+
+The chosen provider consumes the secret and prepares the environment, after which WebOps triggers the build and deployment process. The provider proceeds to build and host the application and returns a status update to WebOps.
+
+Finally, WebOps notifies the user that the secret operation and the deployment were successful.
 
 ## Instructions
 
