--- a/docs/faststore/docs/security/managing-secrets.mdx
+++ b/docs/faststore/docs/security/managing-secrets.mdx
@@ -10,7 +10,7 @@ In this guide, you'll learn how to manage secrets in your FastStore project usin
 
 ## Secrets flow
 
-The Secrets feature employs a structured method for interacting with deployment providers based on project-specific configurations. Below is an example of a successful flow that illustrates how WebOps determines the appropriate provider to use based on the project’s settings and then delegates the build and deployment process accordingly.
+The Secrets feature employs a structured method for interacting with deployment providers based on project-specific configurations. Below is an example of a successful flow that illustrates how WebOps determines the appropriate provider based on the project’s settings and then delegates the build and deployment process accordingly.
 
 ```mermaid
 sequenceDiagram
@@ -72,7 +72,7 @@ Finally, WebOps notifies the user that the secret operation and the deployment w
 
 To manage your secrets, access your [FastStore WebOps dashboard](https://developers.vtex.com/docs/guides/faststore/1-onboarding-dashboard) and navigate to the **Settings** tab.
 
-In the **Secrets** section, you can [create](#creating-secrets), [update](#updating-secrets), or [delete](#deleting-secrets) secrets following the steps below.
+In the [Secrets](https://developers.vtex.com/docs/guides/faststore/1-onboarding-dashboard#secrets) section, you can [create](#creating-secrets), [update](#updating-secrets), or [delete](#deleting-secrets) secrets following the steps below.
 
 ### Creating secrets
 
@@ -94,7 +94,7 @@ In the **Secrets** section, you can [create](#creating-secrets), [update](#updat
 2. Alongside the secret you need to update, click `⋮`, then click `Delete`.
 3. Validate the secret you want to remove. 
 
-	>⚠ This action can’t be undone.
+   >⚠ This action can’t be undone.
 
 4. Click `Delete secret`. You’ll see the message: `Secret deleted successfully. Changes will take effect in the next successful deployment.`
 5. Click on `Redeploy`. You’ll see the message: `Creating deployment…`, then `Deployment created successfully`.
