extensions.mdx - hidden true

--- a/docs/faststore/components/features/my-account/extensions.mdx
+++ b/docs/faststore/components/features/my-account/extensions.mdx
@@ -1,5 +1,6 @@
 ---
 title: "Extending My Account"
+hidden: true
 ---
 
 In this guide, you'll learn how to extend the **My Account** page by creating new pages or adding new sections to the default pages.
