Apply suggestions from code review
Co-authored-by: Mariana Caetano Pereira <67270558+mariana-caetano@users.noreply.github.com>

--- a/docs/faststore/docs/security/managing-secrets.mdx
+++ b/docs/faststore/docs/security/managing-secrets.mdx
@@ -2,7 +2,8 @@
 title: "Managing Secrets"
 ---
 
-Secrets are sensitive information, such as API keys, passwords, and tokens, that must be securely managed during the FastStore project deployment process. Standardizing secrets management through WebOps ensures consistency and enhances security across various deployment providers.
+Secrets are sensitive information, such as API keys, passwords, and tokens, that must be securely managed during the FastStore project deployment process. [WebOps](https://developers.vtex.com/docs/guides/faststore/1-onboarding-overview) centralizes and standardizes secrets management, ensuring a consistent and secure process across all deployment providers.
+
 
 This functionality leverages [AWS Secrets Manager](https://aws.amazon.com/pt/secrets-manager/) as a centralized repository for managing and retrieving secrets across all WebOps projects. As a result, secrets can be securely stored and accessed without embedding them directly within the project.
 
