Adjustments after peer review

--- a/docs/faststore/docs/security/managing-secrets.mdx
+++ b/docs/faststore/docs/security/managing-secrets.mdx
@@ -4,7 +4,6 @@ title: "Managing Secrets"
 
 Secrets are sensitive information, such as API keys, passwords, and tokens, that must be securely managed during the FastStore project deployment process. [WebOps](https://developers.vtex.com/docs/guides/faststore/1-onboarding-overview) centralizes and standardizes secrets management, ensuring a consistent and secure process across all deployment providers.
 
-
 This functionality leverages [AWS Secrets Manager](https://aws.amazon.com/pt/secrets-manager/) as a centralized repository for managing and retrieving secrets across all WebOps projects. As a result, secrets can be securely stored and accessed without embedding them directly within the project.
 
 In this guide, you'll learn how to manage secrets in your FastStore project using [WebOps](https://developers.vtex.com/docs/guides/faststore/1-onboarding-overview).
@@ -26,17 +25,14 @@ autonumber
   %% 1. User initiates secret creation/update/deletion
   User ->> WebOps: Request to create/update/delete secret
 
-  %% 2. WebOps validates permissions
-  WebOps ->> WebOps: Validate permissions and scope
-
-  %% 3. WebOps stores secret in AWS Secrets Manager
-  WebOps ->> AWS: Store/Update/Delete secret (with correct scope)
+  %% 2. WebOps stores secret in AWS Secrets Manager
+  WebOps ->> AWS: Store/Update/Delete secret
   AWS -->> WebOps: Confirm secret storage/update/deletion
 
-  %% 4. WebOps determines which provider to use for build/deployment
+  %% 3. WebOps determines which provider to use for build/deployment
   WebOps ->> WebOps: Select configured provider
 
-  %% 5. WebOps propagates secret to selected provider and initiates build
+  %% 4. WebOps propagates secret to selected provider and initiates build
   alt Provider A
     WebOps ->> ProviderA: Transmit secret securely
     ProviderA ->> ProviderA: Consume secret, prepare environment
@@ -57,17 +53,29 @@ autonumber
     ProviderN -->> WebOps: Send status update
   end
 
-  %% 6. Feedback to user
+  %% 5. Feedback to user
   WebOps -->> User: Notify build and secret operation success
 ```
 
-When a user initiates a request to create or delete a secret, WebOps first validates the user's permissions and the request scope. The scope defines the context, such as project, environment, namespace, or account, that determines where and how the secret will be stored, propagated, and accessed.
+1. User initiates request
+The user initiates a request to create, update, or delete a secret through the WebOps interface.
 
-Once validated, WebOps forwards the operation to AWS Secrets Manager, which confirms the action. Next, WebOps identifies the appropriate deployment provider based on the project’s configuration. It then securely transmits the secret information to the selected provider.
+2. Secret storage
+a. WebOps forwards the request made by the user (create, update, or delete a secret) to AWS Secrets Manager.
+b. AWS confirms the request ("and store the secret"?).
 
-The chosen provider consumes the secret and prepares the environment, after which WebOps triggers the build and deployment process. The provider proceeds to build and host the application and returns a status update to WebOps.
+4. Provider selection
+a. With the AWS confirmation of the request, WebOps identifies the appropriate deployment provider based on the project’s configuration.
+b. WebOps securely transmits the secret information to the selected provider.
 
-Finally, WebOps notifies the user that the secret operation and the deployment were successful.
+5. Secret deployment
+a. The chosen provider consumes the secret and prepares the environment.
+b. WebOps triggers the build and the secret deployment process.
+c. The provider builds and hosts the application and returns a status update to WebOps.
+
+6. WebOps notification to the user
+a. Provider sends status update to WebOps.
+b. In the WebOps interface, the user receives confirmation of the successful secret operation and its deployment.
 
 ## Instructions
 
